digital-ocean/digital-ocean-cloud-infra/platform/argocd/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd

spec:
  parentRefs:
    - name: envoy-shared-gateway
      namespace: gateway-system
      sectionName: https

  hostnames:
    - "argocd.dev.aagnyasoft.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          port: 80
